--- a/ProyectoColas/nbproject/private/private.properties
+++ b/ProyectoColas/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+file.reference.jasperreports-6.7.0.jar=D:\\javaLibs\\jasperLib\\jasperreports-6.7.0.jar
+user.properties.file=C:\\Users\\T420S\\AppData\\Roaming\\NetBeans\\dev\\build.properties
