--- a/ProyectoColas/nbproject/private/private.properties
+++ b/ProyectoColas/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.jasperreports-6.7.0.jar=D:\\javaLibs\\jasperLib\\jasperreports-6.7.0.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\T420S\\AppData\\Roaming\\NetBeans\\dev\\build.properties
