--- a/ProyectoColas/nbproject/project.properties
+++ b/ProyectoColas/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoColas
+application.vendor=T420S
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,6 +31,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ProyectoColas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.9.3.jar=D:\\javaLibs\\jasperLib\\commons-beanutils-1.9.3.jar
 file.reference.commons-collections-3.2.2.jar=D:\\javaLibs\\jasperLib\\commons-collections-3.2.2.jar
@@ -72,6 +74,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -80,6 +83,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=ProyectoColas
 main.class=proyectocolas.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
